# gitcad

./: .gitattributes  .gitignore  CLAUDE.md  CODEOWNERS  LICENSE  NOTICE  README.md  pyproject.toml
bench/: 2026-07-23-auto-occt-vs-auto.json  2026-07-23-calib-occt-vs-occt.json  2026-07-23-k1.1-occt-vs-ref.json  2026-07-23-k2.0-occt-vs-ref.json  2026-07-23-k2.1-occt-vs-ref.json  2026-07-23-k2.2-occt-vs-ref.json  2026-07-23-k3.0-occt-vs-ref.json  2026-07-23-k45-occt-vs-ref.json  2026-07-23-menger-occt-vs-ref.json  2026-07-23-occt.json  2026-07-23-ref-k1-occt-vs-ref.json  2026-07-23-wa-occt-vs-ref.json  2026-07-23-wb-occt-vs-ref.json  2026-07-23-wc-occt-vs-ref.json  2026-07-23-wd-occt-vs-ref.json  2026-07-23-we-occt-vs-ref.json  2026-07-23-wf-occt-vs-ref.json  2026-07-23-wh-occt-vs-ref.json  RUST-vs-OCCT.md  TREND.md
docs/: ROADMAP.md  whitepaper.md
examples/: blinky.py  bracket.py  product.py
scripts/: gen_docs.py  sw-batch-export.ps1
tests/: conftest.py  test_annotate_fpgen.py  test_auto_kernel.py  test_bench.py  test_blind_vias.py  test_bodies_render.py  test_buses.py  test_component_pattern.py  test_deferral_burndown.py  test_envelope.py  test_exploded_views.py  test_explore_checks.py  test_fasteners.py  test_fcstd_project.py  test_hier_authoring.py  test_hierarchical_sch.py  test_init_and_extensions.py  test_ipc2581.py  test_ipcd356_eagle_notes.py  test_k3_nurbs_oracle.py  test_k4_k5_offsets_blends.py  test_keepouts.py  test_kicad_sch_import.py  test_lots.py  test_mate_solve.py  test_mech_analysis.py  test_mech_feature_model.py  test_merge3.py  test_p4_ops.py  (+26 more)
(+100 files in other folders)
